# src/swagger.json
@@ -111,44 +111,58 @@
       }
     },
     "/login": {
-      "post": {
-        "tags": ["Usuários"],
-        "summary": "Login de Usuário",
-        "description": "Realiza o login de um usuário e retorna um token JWT.",
-        "security": [{"bearerAuth": []}],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/LoginUsuario" }
-            },
-            "examples": {
-              "registro": {
-                "value" :{
-                  "email": "arthur@gmail.com",
-                  "senha": "123456"
-                }
-              }
-            }
-          }
+  "patch": {
+    "tags": ["Usuários"],
+    "summary": "Login de Usuário",
+    "description": "Realiza o login de um usuário e retorna um token JWT.",
+    "security": [{"bearerAuth": []}],
+    "requestBody": {
+      "required": true,
+      "content": {
+        "application/json": {
+          "schema": { "$ref": "#/components/schemas/LoginUsuario" }
         },
-        "responses": {
-          "400": {
-            "description": "Email e senha obrigatórios" 
-          },
-          "500": {
-            "description": "Erro ao realizar seu login"
-          },
-          "401": {
-            "description": "Credenciais inválidas." 
-          },
-          "200": {
-            "description": "Login realizado com sucesso." 
+        "examples": {
+          "registro": {
+            "value" :{
+              "email": "arthur@gmail.com",
+              "senha": "123456"
+            }
           }
         }
       }
     },
+    "responses": {
+      "400": { "description": "Email e senha são obrigatórios." },
+      "401": { "description": "Credenciais inválidas." },
+      "500": { "description": "Erro ao realizar login." },
+      "200": {
+        "description": "Login bem-sucedido, retorna um token JWT.",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "token": { "type": "string" }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+},
+
     "/imagens": {
+      "get": {
+        "tags": ["Imagem"],
+        "summary": "Listar todas as imagens",
+        "description": "Retorna todas as imagens cadastradas no sistema.",
+        "responses": {
+          "200": { "description": "Lista de imagens." },
+          "500": { "$ref": "#/components/responses/ErroPadrao" }
+        }
+      },
       "post": {
         "tags": ["Imagem"],
         "summary": "Adicionar uma nova imagem",
@@ -166,16 +180,8 @@
           "400": { "$ref": "#/components/responses/ErroPadrao" },
           "500": { "$ref": "#/components/responses/ErroPadrao" }
         }
-      },
-      "get": {
-        "tags": ["Imagem"],
-        "summary": "Listar todas as imagens",
-        "description": "Retorna todas as imagens cadastradas no sistema.",
-        "responses": {
-          "200": { "description": "Lista de imagens." },
-          "500": { "$ref": "#/components/responses/ErroPadrao" }
-        }
       }
+      
     },
     "/imagens/{id}": {
       "delete": {
@@ -740,7 +746,7 @@
         "properties": {
           "titulo": { "type": "string" },
           "url": { "type": "string"},
-          "descricao": { "type": "string" }
+          "categoria": { "type": "string" }
         },
         "required": ["url"]
       },
